# kill-desktop

./: .travis.yml  Cargo.toml  Dockerfile  README.md  kill-desktop  kill-desktop.toml
src/: config.rs  main.rs  shrinky.rs  term.rs  x.rs
