[package]
name = "kill-desktop"
version = "0.3.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Wait politetly for graphical applications to exit"
repository = "https://github.com/FauxFaux/kill-desktop"
readme = "README.md"

# none of the categories really make any sense..
categories = ["gui", "os"]
license = "MIT OR Apache-2.0"

[badges.travis-ci]
repository = "FauxFaux/kill-desktop"

[dependencies]
dirs = "1"
failure = "0.1"
nix = "0.11"
regex = "1"
serde_derive = "1"
serde = "1"
terminal_size = "0.1"
toml = "0.4"
xcb = "0.8"

[profile.release]
lto = true
