[package]
name = "kill-desktop"
version = "0.3.4"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Wait politetly for graphical applications to exit"
repository = "https://github.com/FauxFaux/kill-desktop"
readme = "README.md"

# none of the categories really make any sense..
categories = ["gui", "os"]
license = "MIT OR Apache-2.0"

edition = "2018"

[badges.travis-ci]
repository = "FauxFaux/kill-desktop"

[dependencies]
anyhow = "1"
dirs = "2"
nix = "0.17"
regex = "1"
serde_derive = "1"
serde = "1"
terminal_size = "0.1"
toml = "0.5"
unicode-width = "0.1"
xcb = "0.9"

[profile.release]
lto = true
