[package]
name = "kill-desktop"
version = "0.3.4"
authors = ["Chris West (Faux) <git@goeswhere.com>"]

description = "Wait politetly for graphical applications to exit"
repository = "https://github.com/FauxFaux/kill-desktop"
readme = "README.md"

# none of the categories really make any sense..
categories = ["gui", "os"]
license = "MIT OR Apache-2.0"

edition = "2024"

[badges.travis-ci]
repository = "FauxFaux/kill-desktop"

[dependencies]
anyhow = "1"
dirs = "6"
nix = { version = "0.30", features = [ "term", "signal" ] }
regex = "1"
serde_derive = "1"
serde = "1"
terminal_size = "0.4"
toml = "0.9"
unicode-width = "0.2"
xcb = "0.10"

[profile.release]
lto = true
